v5/managerService.yaml
apiVersion: v1
kind: Service
metadata:
  name: wso2sp-manager-1
  labels:
    node: wso2sp-manager-1
    pattern: wso2sp-pattern-distributed
spec:
  ports:
    # ports that this service should serve on
    -
      name: 'http-port-1'
      port: 9090
      protocol: TCP
    -
      name: 'https-port-1'
      port: 9543
      protocol: TCP

  # label keys and values that must match in order to receive traffic for this service
  selector:
    node: wso2sp-manager-1
    pattern: wso2sp-pattern-distributed
  # clusterIP: None
  type: LoadBalancer
